objects/MaritzCX__ALG_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to manage integration settings between MaritzCX and Salesforce.</description>
    <fields>
        <fullName>MaritzCX__Case_Record_Type__c</fullName>
        <description>This field stores Salesforce Case Record Type Id to which MaritzCX cases should get assigned.</description>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Create_New_Contact_On_Survey_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled a new Contact/PersonAccount will be created for a Response for which an associated Contact/PersonAccount is not found. This setting will work only if &apos;Insert Unmapped Responses&apos; setting is enabled.</description>
        <inlineHelpText>When enabled a new Contact/PersonAccount will be created for a Response for which an associated Contact/PersonAccount is not found. This setting will work only if &apos;Insert Unmapped Responses&apos; setting is enabled.</inlineHelpText>
        <label>Create New Contact On Survey Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Create_New_Lead_On_Survey_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled a new Lead will be created for a Response for which an associated Lead is not found. This setting will work only if &apos;Insert Unmapped Responses&apos; setting is enabled.</description>
        <inlineHelpText>When enabled a new Lead will be created for a Response for which an associated Lead is not found. This setting will work only if &apos;Insert Unmapped Responses&apos; setting is enabled.</inlineHelpText>
        <label>Create New Lead On Survey Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Feed_Message__c</fullName>
        <defaultValue>&apos;A new case was created and has been assigned to you.&apos;</defaultValue>
        <label>Feed Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Help_Link__c</fullName>
        <defaultValue>&apos;https://help.allegiancetech.com/webhelp/Allegiance_V7.htm&apos;</defaultValue>
        <label>Help Link</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Insert_Unmapped_Cases_in_Salesforce__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Checked, the Cases will be inserted into Salesforce even if the matching record (Contact/Person Account/Lead) is not found.
If Unchecked, the Cases with no mapped record will not be inserted into Salesforce.</description>
        <inlineHelpText>If Checked, the Cases will be inserted into Salesforce even if the matching record (Contact/Person Account/Lead) is not found.
If Unchecked, the Cases with no mapped record will not be inserted into Salesforce.</inlineHelpText>
        <label>Insert Unmapped Cases in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Insert_Unmapped_Responses_in_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, the Responses will be inserted into Salesforce even if the matching record (Contact/Person Account/Lead) is not found.
If Unchecked, the Responses with no mapped record will not be inserted into Salesforce.</description>
        <inlineHelpText>If Checked, the Responses will be inserted into Salesforce even if the matching record (Contact/Person Account/Lead) is not found.
If Unchecked, the Responses with no mapped record will not be inserted into Salesforce.</inlineHelpText>
        <label>Insert Unmapped Responses in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Is_Integration_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is deprecated from the package version 2.5 .</inlineHelpText>
        <label>Integration Active [DEPRECATED]</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Package_Version__c</fullName>
        <description>Stores the package version number of installing or upgrading package.</description>
        <label>Package Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Post_To_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post To Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Re_Associate_Responses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is used during ODRP(On Demand Response Push):
If Checked, already associated Responses will also be considered for association along with the Orphan Responses.
If Unchecked, only the Orphan Responses will be considered for the association.</description>
        <inlineHelpText>This setting is used during ODRP(On Demand Response Push):
If Checked, already associated Responses will also be considered for association along with the Orphan Responses.
If Unchecked, only the Orphan Responses will be considered for the association.</inlineHelpText>
        <label>Re-Associate Responses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Service_Endpoint__c</fullName>
        <defaultValue>&apos;api100lb.allegiancetech.com&apos;</defaultValue>
        <label>Service Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Support_Business_And_Person_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled Responses/Cases will be associated with their respective Business/Person Account.</description>
        <inlineHelpText>When enabled Responses/Cases will be associated with their respective Business/Person Account.</inlineHelpText>
        <label>Support Business And Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Support_Email__c</fullName>
        <inlineHelpText>This email address is used to send a copy of failure emails to MCX support.</inlineHelpText>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <label>2.MaritzCX: Integration Settings</label>
</CustomObject>